[package]
name = "uf2"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"

[dependencies]
bitmask               = { version = "0.5.0", default-features = false }
packed_struct         = { git = "https://github.com/cs2dsb/packed_struct.rs", default-features = false }
packed_struct_codegen = { git = "https://github.com/cs2dsb/packed_struct.rs", default-features = false }
#packed_struct         = { path = "../../../../rust/packed_struct.rs/packed_struct", default-features = false }
#packed_struct_codegen = { path = "../../../../rust/packed_struct.rs/packed_struct_codegen", default-features = false }