[package]
authors = [""]
edition = "2018"
readme = "README.md"
name = "usb_bootloader"
version = "0.1.0"

[dependencies]
cortex-m              = "0.6.2"
cortex-m-rt           = "0.6.9"
cortex-m-rtfm         = "0.5.1"
stm32f1               = "0.8.0"
usb-device            = "0.2.4"
usbd-serial           = "0.1"
usbd-webusb           = "1.0.0"
stm32f1xx-hal         = { version = "0.5", features = ["stm32f103", "stm32-usbd", "rt"] }
embedded-hal          = { version = "0.2.3", features = ["unproven"] }
bitmask               = { version = "0.5.0", default-features = false }
itm_logger            = { git = "https://github.com/cs2dsb/itm_logger.rs", default-features = false }
#itm_logger            = { path = "../../../../rust/itm_logger", default-features = false }
usbd-mass-storage     = { path = "../usbd_mass_storage" }
usbd-scsi             = { path = "../usbd_scsi" }

[features]
default = [ "itm" ]
itm = [ "itm_logger/logging" ]
trace-usb = [ "usbd-mass-storage/trace-all", "usbd-scsi/trace-all" ]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 's'

[profile.dev]
lto = true
