[package]
name = "usbd-bulk-only-transport"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"

[dependencies]
usb-device            = "0.2.4"
embedded-hal          = "0.2.3"
nb                    = "0.1.2"
itm_logger            = { git = "https://github.com/cs2dsb/itm_logger.rs", default-features = false }
#itm_logger            = { path = "../../../../rust/itm_logger", default-features = false }
typenum               = "1.11.2"
usbd-mass-storage     = { path = "../usbd_mass_storage" }
packing               = { path = "../packing/packing" }

[features]
trace-bot-headers = []
trace-bot-states = []
trace-bot-bytes = []
trace-bot-zlp = []
trace-bot-buffer = []
trace-usb-control = [ "usbd-mass-storage/trace-usb-control" ]
trace-all = [ "trace-bot-headers", "trace-bot-states", "trace-bot-bytes", "trace-bot-zlp", "trace-bot-buffer",
              "trace-usb-control" ]
