[package]
name = "usbd-mass-storage"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"

[dependencies]
usb-device            = "0.2.4"
embedded-hal          = "0.2.3"
nb                    = "0.1.2"
itm_logger            = { git = "https://github.com/cs2dsb/itm_logger.rs", default-features = false }
#itm_logger            = { path = "../../../../rust/itm_logger", default-features = false }
typenum               = "1.11.2"
packed_struct         = { git = "https://github.com/cs2dsb/packed_struct.rs", default-features = false }
packed_struct_codegen = { git = "https://github.com/cs2dsb/packed_struct.rs", default-features = false }
#packed_struct         = { path = "../../../../rust/packed_struct.rs/packed_struct", default-features = false }
#packed_struct_codegen = { path = "../../../../rust/packed_struct.rs/packed_struct_codegen", default-features = false }
codegen               = { path = "./codegen" }
uf2                   = { path = "../uf2" }

[features]
trace-bot-headers = []
trace-bot-states = []
trace-bot-bytes = []
trace-bot-zlp = []
trace-bot-buffer = []
trace-scsi-command = []
trace-scsi-fs = []
trace-all = [ "trace-bot-headers", "trace-bot-states", "trace-bot-bytes", "trace-bot-zlp", "trace-bot-buffer",
              "trace-scsi-command", "trace-scsi-fs" ]
