[package]
name = "usbd-mass-storage"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"

[dependencies]
usb-device            = "0.2.4"
embedded-hal          = "0.2.3"
nb                    = "0.1.2"
itm_logger            = { git = "https://github.com/cs2dsb/itm_logger.rs", default-features = false }
#itm_logger            = { path = "../../../../rust/itm_logger", default-features = false }
typenum               = "1.11.2"
packing               = { path = "../packing/packing" }

[features]
trace-usb-control = []
trace-all = [ "trace-usb-control" ]
